--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pdf2json": "^4.0.0",
     "pinecone-client": "^2.0.0",
     "socket.io": "^4.8.1",
+    "streamifier": "^0.1.1",
     "validator": "^13.15.15",
     "web-push": "^3.6.7"
   },
